# cmodular

./: .gitignore  README.md  Scratch.md  meson.build
include/: category.h  cmodular.h  common.h  interface.h  module.h  modulesystem.h  vtable.h  vtable_base.h
src/: module.c  modulesystem.c
subprojects/: evol_threads.wrap  hashmap.wrap  vec.wrap
subprojects/packagefiles/vec/: meson.build
test/: cmod_categories.h  cmod_interfaces.h  ev_interfaces.h  main.c  mainold.c
